@startuml
namespace app {
    class CustomerHandlers << (S,Aquamarine) >> {
        - service service.CustomerService

        - getAllCustomers(w http.ResponseWriter, r *http.Request) 

    }
}


namespace domain {
    class Customer << (S,Aquamarine) >> {
        + Id string
        + Name string
        + City string
        + Zipcode string
        + DateOfBirth string
        + Status string

    }
    interface CustomerRepository  {
        + FindAll() ([]Customer, error)

    }
    class CustomerRepositoryStub << (S,Aquamarine) >> {
        - customers []Customer

        + FindAll() ([]Customer, error)

    }
}

"domain.CustomerRepository" <|-- "domain.CustomerRepositoryStub"

namespace service {
    interface CustomerService  {
        + GetAllCustomer() ([]domain.Customer, error)

    }
    class DefaultCustomerService << (S,Aquamarine) >> {
        - repo domain.CustomerRepository

        + GetAllCustomer() ([]domain.Customer, error)

    }
}

"service.CustomerService" <|-- "service.DefaultCustomerService"

@enduml
